[Fix] -> SPacing param selected active color changed to #000000

--- a/inc/customizer/custom-controls/responsive-spacing/responsive-spacing.scss
+++ b/inc/customizer/custom-controls/responsive-spacing/responsive-spacing.scss
@@ -69,6 +69,7 @@
 			&.active {
 				text-decoration: underline;
 				opacity: 1;
+				color: #000000;
 			}
 		}
 	}
